--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,14 @@ packages = [
 python = "^3.9"
 langgraph = "0.2.60"
 env-canada= "0.7.2"
+poetry = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 black = "^23.7.0"
 isort = "^5.12.0"
 flake8 = "^6.1.0"
+debugpy = "^1.8.11"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
