--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python = "^3.9"
 langgraph = "0.2.60"
 env-canada= "0.7.2"
 poetry = "^2.0.0"
+geopy = "^2.4.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
