--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,53 @@
+aiofiles==23.2.1
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.8.0
+asttokens==3.0.0
 attrs==24.3.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
+click==8.1.8
+decorator==5.1.1
 defusedxml==0.7.1
 distro==1.9.0
 env_canada==0.7.2
+executing==2.2.0
+fastapi==0.115.8
+ffmpy==0.5.0
+filelock==3.17.0
 frozenlist==1.5.0
+fsspec==2025.2.0
 geographiclib==2.0
 geopy==2.4.1
+gradio==5.14.0
+gradio_client==1.7.0
+groq==0.15.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
+huggingface-hub==0.28.1
 idna==3.10
 imageio==2.36.1
+ipython==8.32.0
+jedi==0.19.2
+Jinja2==3.1.5
 jiter==0.8.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain-core==0.3.31
+langchain-groq==0.2.3
 langchain-openai==0.3.2
 langgraph==0.2.60
 langgraph-checkpoint==2.0.10
 langgraph-sdk==0.1.51
 langsmith==0.2.10
 lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+mdurl==0.1.2
 msgpack==1.1.0
 multidict==6.1.0
 numpy==2.2.1
@@ -34,23 +55,44 @@ openai==1.60.1
 orjson==3.10.14
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.1.0
+prompt_toolkit==3.0.50
 propcache==0.2.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pydantic==2.10.5
 pydantic_core==2.27.2
+pydub==0.25.1
+Pygments==2.19.1
 python-dateutil==2.9.0.post0
+python-multipart==0.0.20
 pytz==2024.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+rich==13.9.4
+ruff==0.9.4
+safehttpx==0.1.6
+semantic-version==2.10.0
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+stack-data==0.6.3
+starlette==0.45.3
 tenacity==9.0.0
 tiktoken==0.8.0
+tomlkit==0.13.2
 tqdm==4.67.1
+traitlets==5.14.3
+typer==0.15.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
+uvicorn==0.34.0
 voluptuous==0.15.2
+wcwidth==0.2.13
+websockets==14.2
 yarl==1.18.3
